src/App.css
.statusOk{
  min-height: auto;
  max-height: fit-content;
}
.statusLoading{
  min-height: 80vh;
  max-height: 80vh;
}
.statusError{
  min-height: 80vh;
  max-height: 80vh;
}
.selectItemsPerPage{
  color: #0d6efd;
}


::-webkit-scrollbar{
  width: 0px;
}
::-webkit-scrollbar-track{
  background-color: transparent;
}
::-webkit-scrollbar-thumb{
  background-color: #212529;
}

.scrollableDiv{
  overflow-x: hidden;
}

